--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <li class="contact-info">
             <a class="address-link" href="mailto:info@devstudio.com">
               <svg class="address-icon">
-                <use href="./images/p"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a>
           </li>
           <li class="contact-info">
             <a class="address-link" href="tel:+380961111111">
               <svg class="address-icon-2">
-                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a>
           </li>
@@ -80,7 +80,7 @@
             <div class="skills-item-img">
               <a href="" class="" target="_blank" rel="noopener noreferrer">
                 <svg class="skills-item-svg" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                  <use href="./images/photo-icons/sprite.svg#icon-clock"></use>
                 </svg>
               </a>
             </div>
@@ -94,7 +94,7 @@
             <div class="skills-item-img">
               <a href="" class="" target="_blank" rel="noopener noreferrer">
                 <svg class="skills-item-svg" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                  <use href="./images/photo-icons/sprite.svg#icon-diagram"></use>
                 </svg>
               </a>
             </div>
@@ -108,7 +108,7 @@
             <div class="skills-item-img">
               <a href="" class="" target="_blank" rel="noopener noreferrer">
                 <svg class="skills-item-svg" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/photo-icons/sprite.svg#icon-astronaut"></use>
                 </svg>
               </a>
             </div>
@@ -152,28 +152,28 @@
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -189,28 +189,28 @@
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -226,28 +226,28 @@
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -263,28 +263,28 @@
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons-item">
                   <a href="" class="social-icons-link" target="_blank" rel="noopener noreferrer">
                     <svg class="social-icons-svg">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                      <use href="./images/photo-icons/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -303,42 +303,42 @@
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./images/icons/sprite.svg#icon-Logo"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-Logo"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./images/icons/sprite.svg#icon-Logo-2"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-Logo-1"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./images/icons/sprite.svg#icon-Logo-3"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-Logo-2"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./images/icons/sprite.svg#icon-Logo-4"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-Logo-3"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./images/icons/sprite.svg#icon-Logo-5"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-Logo-4"></use>
               </svg>
             </a>
           </li>
           <li class="our-clients-item">
             <a href="" class="our-clients-position">
               <svg class="our-clients-svg">
-                <use href="./images/icons/sprite.svg#icon-Logo-6"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-Logo-5"></use>
               </svg>
             </a>
           </li>
@@ -370,28 +370,28 @@
           <li class="social-icons-item">
             <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
               <svg class="footer-social-icons-svg">
-                <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-icons-item">
             <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
               <svg class="footer-social-icons-svg">
-                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-icons-item">
             <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
               <svg class="footer-social-icons-svg">
-                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-icons-item">
             <a href="" class="footer-social-icons-link" target="_blank" rel="noopener noreferrer">
               <svg class="footer-social-icons-svg">
-                <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                <use href="./images/photo-icons/sprite.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
